# gcal

./: app.py  backup_gcal.py  calendars.pkl  categorizer.py  controller.py  controllers.py  converter.py  converter2.py  data.db  data.json  database.py  db.py  fix_name.py  gcal.py  gui.py  model.py  models.py  modifer.py  modified_calendar.ics  mtime  mycal.ics  pyproject.toml  sumarry  test.py  utils.py  views.py
cal/: Growth.ics  Saeed.ics  Saeed_updated.ics  Study.ics  growth.ics  saeed.ics  study.ics  work.ics
calendars/: Growth.ics  Saeed.ics  Study.ics  Work.ics  birthdays.ics  growth.ics  saeed.ics  study.ics  temp.ics  work.ics
db/: data.db  data.db-journal  data_odl.db  growth.db  saeed.db  study.db  work.db
ics/: Saeed.ics  Work.ics  data.ics  growth.ics  saeed.ics  study.ics  work.ics
